--- a/vagrant/lxc/Vagrantfile
+++ b/vagrant/lxc/Vagrantfile
@@ -6,7 +6,7 @@ Vagrant.configure("2") do |config|
     # Same effect as 'customize ["modifyvm", :id, "--memory", "1024"]' for VirtualBox
     lxc.customize 'cgroup.memory.limit_in_bytes', '512M'
     lxc.customize 'cgroup.cpu.shares', '512'
-    lxc.customize 'cgroup.cpuset.cpus', '4'
+    #lxc.customize 'cgroup.cpuset.cpus', '4'
   end
 
   config.vm.provision :shell, :inline =>
