--- a/vagrant/lxc/Vagrantfile
+++ b/vagrant/lxc/Vagrantfile
@@ -1,6 +1,6 @@
 Vagrant.configure("2") do |config|
-  config.vm.box = "quantal64"
-  config.vm.boot_timeout  = "1200"
+  config.vm.box = "precise"
+  config.vm.boot_timeout  = 1200
 
   config.vm.provider :lxc do |lxc|
     # Same effect as 'customize ["modifyvm", :id, "--memory", "1024"]' for VirtualBox
