--- a/vagrant/lxc/Vagrantfile
+++ b/vagrant/lxc/Vagrantfile
@@ -10,7 +10,7 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.provision :shell, :inline =>
-    "if [[ ! -f /apt-get-run ]]; then sudo apt-get update && sudo touch /apt-get-run && apt-get -y install python-software-properties && mkdir -p /root/.ssh && chmod 0700 /root/.ssh; fi"
+    "if [[ ! -f /apt-get-run ]]; then sudo apt-get update && sudo touch /apt-get-run && apt-get -y install python-software-properties && mkdir -p /root/.ssh && chmod 0700 /root/.ssh && apt-get -y install ufw; fi"
 
 #  config.vm.share_folder ".ssh", "/home/vagrant/.ssh", "~/.ssh"
 
