--- a/vagrant/lxc/Vagrantfile
+++ b/vagrant/lxc/Vagrantfile
@@ -1,18 +1,18 @@
 Vagrant.configure("2") do |config|
-  config.vm.box = "devops-lxc"
+  config.vm.box = "precise"
   config.vm.boot_timeout  = 1200
 
   config.vm.provider :lxc do |lxc|
     # Same effect as 'customize ["modifyvm", :id, "--memory", "1024"]' for VirtualBox
-    lxc.customize 'cgroup.memory.limit_in_bytes', '1024M'
-    #lxc.customize 'cgroup.cpu.shares', '512'
+    lxc.customize 'cgroup.memory.limit_in_bytes', '512M'
+    lxc.customize 'cgroup.cpu.shares', '512'
     #lxc.customize 'cgroup.cpuset.cpus', '4'
   end
 
   config.vm.provision :shell, :inline =>
     "if [[ ! -f /apt-get-run ]]; then sudo apt-get update && sudo touch /apt-get-run && apt-get -y install python-software-properties && mkdir -p /root/.ssh && chmod 0700 /root/.ssh && apt-get -y install ufw; fi"
 
-#  config.vm.share_folder ".ssh", "/home/vagrant/.ssh", "~/.ssh"
+  config.vm.share_folder ".ssh", "/home/vagrant/.ssh", "~/.ssh"
 
   # definindo configurações do puppet
   config.vm.provision :puppet do |puppet|
